--- a/SECURITY-COPY/src/main/resources/application.properties
+++ b/SECURITY-COPY/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+
+
+server.port=8080
+#datasource information
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=gagan12
+spring.datasource.url=jdbc:mysql://localhost:3306/practise
+
+##spring data jpa##
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
