--- a/Practise2/src/main/resources/application.properties
+++ b/Practise2/src/main/resources/application.properties
@@ -1,2 +1,11 @@
-
-server.port=8081
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotelservice
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=gagan12
+#jpa properties
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
