--- a/ratingservice/src/main/resources/application.properties
+++ b/ratingservice/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.main.allow-bean-definition-overriding=true
+server.port=8083
+spring.data.mongodb.user=test
+spring.data.mongodb.password=gagan12
+spring.data.mongodb.uri=mongodb://localhost:27017/Ratingservice2
